# stripe-copy-prod-to-test

./: .env.sample  .gitignore  .python-version  README.md  main.py  pyproject.toml  requirements.txt
mappings/: .gitkeep
src/: __init__.py  config.py  logger.py  mapper.py  stripe_client.py
src/copiers/: __init__.py  base.py  coupons.py  prices.py  products.py  tax_rates.py
